--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,22 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.4+8
 
+  #firebase
+  firebase_core: ^1.12.0
+  firebase_storage: ^10.2.7
+  
+  file_picker: ^4.3.3
+
+  #database
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - img/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
